[gd_scene load_steps=5 format=3 uid="uid://cws5ocnlqoar4"]

[ext_resource type="Texture2D" uid="uid://0ytvadan2aw8" path="res://Assets/base.png" id="1_aiu4t"]
[ext_resource type="Script" path="res://Scenes/ground.gd" id="1_hi7xa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlcyx"]
size = Vector2(332.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jlnp"]
size = Vector2(336, 20)

[node name="Ground" type="Node2D"]
script = ExtResource("1_hi7xa")

[node name="GroundOne" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="GroundOne"]
texture = ExtResource("1_aiu4t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundOne"]
position = Vector2(1.75, -44)
shape = SubResource("RectangleShape2D_rlcyx")

[node name="GroundTwo" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="GroundTwo"]
position = Vector2(336, 2.08165e-12)
texture = ExtResource("1_aiu4t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundTwo"]
position = Vector2(336, -44)
shape = SubResource("RectangleShape2D_1jlnp")

[connection signal="body_entered" from="GroundOne" to="." method="_on_body_entered"]
[connection signal="body_entered" from="GroundTwo" to="." method="_on_body_entered"]
